--- a/Project Sylveon/wwwroot/css/site.css
+++ b/Project Sylveon/wwwroot/css/site.css
@@ -1,71 +1,80 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿:root
+{
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+    --header-height: 60px;
+    --context-menu-height: 60px;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+body
+{
+    margin: 0;
+    height: 100vh;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+header
+{
+    background-color: red;
+    height: var(--header-height);
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+main
+{
+    position: relative;
+    height: calc(100% - var(--header-height));
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+#flex-container
+{
+    height: 100%;
+    display: flex;
+    flex-flow: row;
+    flex-grow: 100%;
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+#draggable-elements-menu-container
+{
+    background-color: green;
+    flex: 2;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+#draggable-elements-menu-container .context-menu
+{
+    background-color: chocolate;
+    height: var(--context-menu-height);
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+#code-container
+{
+    background-color: blue;
+    flex: 2;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+
+#code-container .context-menu
+{
+    background-color: firebrick;
+    height: var(--context-menu-height);
+}
+
+.scrollable-menu
+{
+    overflow-y: auto;
+    height: calc(100% - var(--context-menu-height));
+}
+
+#game-grid
+{
+    background-color: purple;
+    flex: 3;
+}
+
+#play-button
+{
+    background-color: yellow;
+    position: absolute;
+    left: 55.5%;
+    top: 45%;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
 }
