--- a/Project Sylveon/wwwroot/css/site.css
+++ b/Project Sylveon/wwwroot/css/site.css
@@ -1,6 +1,17 @@
 ﻿:root
 {
+    --primary-color-light: rgb(16, 151, 77);
+    --primary-color-default: rgb(0, 121, 54);
+    --primary-color-dark: rgb(0, 92, 41);
 
+    --accent-color-light: rgb(8, 100, 150);
+    --accent-color-default: rgb(3, 82, 125);
+    --accent-color-dark: rgb(0, 64, 99);
+
+    --background-color-default: rgb(231, 238, 229);
+
+    --text-color-dark: rgb(3, 3, 3);
+    --text-color-light: rgb(244, 255, 249);
 
     --header-height: 60px;
     --context-menu-height: 60px;
@@ -10,12 +21,16 @@ body
 {
     margin: 0;
     height: 100vh;
+    background-color: var(--background-color-default);
+
+    color: var(--text-color-dark);
 }
 
 header
 {
-    background-color: red;
+    background-color: var(--primary-color-default);
     height: var(--header-height);
+    color: var(--text-color-light);
 }
 
 main
@@ -32,28 +47,37 @@ main
     flex-grow: 100%;
 }
 
+#flex-container > div:not(:first-child)
+{
+    border-style: none none none solid;
+    border-color: var(--primary-color-default);
+    border-width: 2px;
+}
+
 #draggable-elements-menu-container
 {
-    background-color: green;
     flex: 2;
 }
 
 #draggable-elements-menu-container .context-menu
 {
-    background-color: chocolate;
     height: var(--context-menu-height);
 }
 
 #code-container
 {
-    background-color: blue;
     flex: 2;
 }
 
 #code-container .context-menu
 {
-    background-color: firebrick;
     height: var(--context-menu-height);
+}
+
+.context-menu
+{
+    background-color: var(--primary-color-light);
+    color: var(--text-color-light);
 }
 
 .scrollable-menu
@@ -64,17 +88,30 @@ main
 
 #game-grid
 {
-    background-color: purple;
-    flex: 3;
+    flex: 5;
+    background-color: gray;
 }
 
 #play-button
 {
-    background-color: yellow;
     position: absolute;
-    left: 55.5%;
+    left: 42.8%;
     top: 45%;
     width: 60px;
     height: 60px;
     border-radius: 100%;
+    background-color: var(--accent-color-default);
+    border-color: var(--accent-color-dark);
+    border-style: solid;
+    color: var(--text-color-light);
+}
+
+#play-button:hover
+{
+    background-color: var(--accent-color-light);
+}
+
+strong
+{
+    color: var(--accent-color-default);
 }
