Implemented system for partial/sub models

--- a/Project Sylveon/Pages/Index.cshtml
+++ b/Project Sylveon/Pages/Index.cshtml
@@ -10,13 +10,13 @@
 <main>
     <div id="flex-container">
         <div id="draggable-elements-menu-container">
-            <partial name="GridPuzzlePartials/DraggableElementsMenu"></partial>
+            <partial name="GridPuzzlePartials/DraggableElementsMenu" model="Model.DraggableElementsMenu"></partial>
         </div>
         <div id="code-container">
-            <partial name="GridPuzzlePartials/CodeMenu"></partial>
+            <partial name="GridPuzzlePartials/CodeMenu" model="Model.CodeMenu"></partial>
         </div>
         <div id="game-grid">
-            <partial name="GridPuzzlePartials/GameGrid"></partial>
+            <partial name="GridPuzzlePartials/GameGrid" model="Model.GameGrid"></partial>
         </div>
     </div>
     <button id="play-button">
