--- a/Project Sylveon/Pages/GridPuzzlePartials/Header.cshtml
+++ b/Project Sylveon/Pages/GridPuzzlePartials/Header.cshtml
@@ -6,7 +6,8 @@
         Level 1
     </div>
     <div id="puzzle-time" class="progress">
-        <label class="progress-value"><span id="puzzle-time-minute">5</span><span id="puzzle-time-sign">:</span><span id="puzzle-time-second">00</span></label>
-        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%"></div>
+        <div class="progress-bar progress-bar-striped bg-secondary" style="width: 50%"><label class="progress-value"><span id="puzzle-time-minute">5</span><span id="puzzle-time-sign">:</span><span id="puzzle-time-second">00</span></label></div>
     </div>
 </div>
+
+<script src="~/ts/gridpuzzle/header.js"></script>
