Fix compiler error and some warnings in front end index page

--- a/Project Sylveon/Pages/Index.cshtml
+++ b/Project Sylveon/Pages/Index.cshtml
@@ -5,18 +5,18 @@
 }
 
 <header>
-    <partial name="GridPuzzlePartials/Header"></partial>
+    <partial name="GridPuzzlePartials/Header"/>
 </header>
 <main>
     <div id="flex-container">
         <div id="draggable-elements-menu-container">
-            <partial name="GridPuzzlePartials/DraggableElementsMenu" model="Model.DraggableElementsMenu"></partial>
+            <partial name="GridPuzzlePartials/DraggableElementsMenu" model="Model.DraggableElementsMenu"/>
         </div>
         <div id="code-container">
-            <partial name="GridPuzzlePartials/CodeMenu" model="Model.CodeMenu"></partial>
+            <partial name="GridPuzzlePartials/CodeMenu" model="Model.CodeMenu"/>
         </div>
         <div id="game-grid">
-            <partial name="GridPuzzlePartials/GameGrid" model="Model.GameGrid"></partial>
+            <partial name="GridPuzzlePartials/GameGrid" model="Model.GameGrid"/>
         </div>
     </div>
     <button id="play-button">
