--- a/React Frontend/ClientApp/src/css/overview.css
+++ b/React Frontend/ClientApp/src/css/overview.css
@@ -1,11 +1,18 @@
 .levelOverview{
+	display: block;
+    border: 1px solid blue;
+	margin: 25px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+}
+.textLevelOverview{
     text-decoration: none;
-}
-.solved{
     color: black;
-    background-color: green;
 }
-.unsolved{
-    color: white;
-    background-color: red;
+.levelIcon{
+    margin: -3px 2px;
+    float: right;
+    height: 30px;
 }
