Add redirecting button to results

--- a/React Frontend/ClientApp/src/css/overview.css
+++ b/React Frontend/ClientApp/src/css/overview.css
@@ -1,18 +1,22 @@
-.levelOverview{
+.levelOverview {
 	display: block;
-    border: 1px solid blue;
+	border: 1px solid blue;
 	margin: 25px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: auto;
 }
-.textLevelOverview{
-    text-decoration: none;
-    color: black;
+.textLevelOverview {
+	text-decoration: none;
+	color: black;
 }
-.levelIcon{
-    margin: -3px 2px;
-    float: right;
-    height: 30px;
+.levelIcon {
+	margin: -3px 2px;
+	float: right;
+	height: 30px;
+}
+
+.finalize-button {
+	width: 200px;
 }
