--- a/React Frontend/ClientApp/src/css/statement.css
+++ b/React Frontend/ClientApp/src/css/statement.css
@@ -1,21 +1,43 @@
-﻿button {
-    width: 100%;
-}
-
-#wrapper {
-    width: 100%;
+﻿#code-section
+{
+    width: 90%;
+    height: 75vh;
     border: 1px solid black;
-    overflow: hidden;
 }
 
-#input {
-    width: 50%;
-    position: relative;
-    float: left;
+#blockly
+{
+    width: 100%;
+    height: 100%;
 }
 
-#output {
-    width: 50%;
-    position: relative;
-    overflow: hidden;
+.blockly-wrapper
+{
+    width: 100%;
+    height: 100%;
+}
+
+#run-button
+{
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    border-radius: 100%;
+    left: 45%;
+    top: 40%;
+    background-color: green;
+    color: white;
+    border: 1px solid green;
+    z-index: 10000;
+    transition: 0.05s;
+}
+
+#run-button:hover
+{
+    background-color: yellowgreen;
+}
+
+#run-button:active
+{
+    background-color: wheat;
 }
