--- a/React Frontend/ClientApp/src/css/Statistics.css
+++ b/React Frontend/ClientApp/src/css/Statistics.css
@@ -1,13 +1,5 @@
-﻿.container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 100%;
-}
-
+﻿
 .level-chart-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr;
     text-align: center;
 }
 
@@ -15,7 +7,11 @@
     width: 100%;
     font-size: 150%;
 }
-
+.stats-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto 1fr;
+}
 .level-chart {
     width: 100%;
 }
